Modify type effect to cancel previous instances before starting a new one, avoiding overlap issues.

--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ header {
 
     .typing-effect {
         font-size: 30px;
-        margin-top: 120px;
+        margin-top: 107px;
         position: sticky;
         z-index: 200;
         margin-left: -31px;
